--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/2.PNG" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/2.png" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -106,7 +106,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/5.PNG" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/5.png" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -115,7 +115,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/6.PNG" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/6.png" alt="" />
                         </div>
                     </div>
                 </div>
